--- a/LogicGateLevels/level1.html
+++ b/LogicGateLevels/level1.html
@@ -55,7 +55,7 @@
         </div>
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
-            <button class="quit">Quit Quiz</button>
+            <button class="quit">Save and Quit Quiz</button>
         </div>
     </div>
     <script src="level1.js"></script>
